[package]
name = "core-crypto"
version = "0.1.1-alpha.0"
authors = ["Puppet Black <blockpuppetblack0@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/BlockPuppets/symbol-crypto-core"
keywords = ["symbol", "nis1", "nem", "cryptography", "ed25519", "curve25519", "signature"]
categories = ["cryptography"]
exclude = [".gitignore"]
edition = "2018"

[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true

[dependencies.serde_bytes]
version = "0.11"
optional = true

[dependencies.regex]
version = "^1"

[dependencies.hex]
version = "0.4.2"

[dependencies.fixed-hash]
version = "0.3"

[dependencies.ed25519-dalek]
version = "^1.0.1"

[dependencies.curve25519-dalek]
version = "3.1.0"

[dependencies.anyhow]
version = "1.0"

[dependencies.signature]
version = "1.3"

[dependencies.sha3]
version = "0.9"

[dependencies.bip39]
version = "1.0.1"
features = ['rand']
optional = true

[dependencies.rand]
version = "0.7"
default-features = false

[features]
default = []  # default support for symbol blockchain
serde = ['serde_crate', 'serde_bytes']
with_mnemonic = ['bip39']

[dev-dependencies]
