[package]
name = "core-crypto"
version = "0.1.1-alpha.3"
authors = ["Puppet Black <blockpuppetblack0@gmail.com>"]
description = "Symbol & Nis1 Crypto Core crate."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/BlockPuppets/symbol-crypto-core"
keywords = ["symbol", "nis1", "nem", "cryptography", "curve25519"]
categories = ["cryptography"]
exclude = [".gitignore"]
edition = "2021"

[dependencies.anyhow]
version = "1.0"

[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true

[dependencies.serde_bytes]
version = "0.11"
optional = true

[dependencies.regex]
version = "^1"

[dependencies.hex]
version = "0.4.3"

[dependencies.rand]
version = "0.8"

[dependencies.fixed-hash]
version = "0.7"

[dependencies.ed25519-dalek]
version = "^1.0.1"

[dependencies.curve25519-dalek]
version = "4.0.0-pre.2"

[dependencies.signature]
version = "1.5"

[dependencies.sha3]
version = "^0.10"
default-features = false

[dependencies.bip39]
version = "1.0"
features = ['rand']
optional = true

[features]
default = []
serde = ['serde_crate', 'serde_bytes']
with_mnemonic = ['bip39']