[package]
name = "nis1-crypto"
version = "0.1.0"
authors = ["Puppet Black <blockpuppetblack0@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/BlockPuppets/symbol-crypto-core"
keywords = ["symbol", "nis1", "nem", "cryptography", "ed25519", "curve25519", "signature"]
categories = ["cryptography"]
exclude = [".gitignore"]
edition = "2018"

[lib]
name = "nis1_crypto"
crate-type = ["lib"]

[dependencies]
core-crypto = { version = "0.1.0", path = "../core" }

[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true

[dependencies.serde_bytes]
version = "0.11"
optional = true

[dependencies.sha3]
version = "0.9"

[dependencies.signature]
version = "1.3"

[dependencies.aes]
version = "0.7.2"

[dependencies.block-modes]
version = "0.8.1"

[dependencies.anyhow]
version = "1.0"

[features]
default = []  # default support for symbol blockchain
serde = ['serde_crate', 'serde_bytes']

[dev-dependencies]