[package]
name = "nis1-crypto"
version = "0.1.1-alpha.3"
authors = ["Puppet Black <blockpuppetblack0@gmail.com>"]
description = "Nem Nis1 Bockchain crypto crate."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/BlockPuppets/symbol-crypto-core"
keywords = ["nis1", "nem", "cryptography", "curve25519"]
categories = ["cryptography"]
exclude = [".gitignore"]
edition = "2018"

[lib]
name = "nis1_crypto"
crate-type = ["lib"]

[dependencies.core-crypto]
version = "0.1.1-alpha.2"
path = "../core"

[dependencies.anyhow]
version = "1.0"

[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true

[dependencies.serde_bytes]
version = "0.11"
optional = true

[dependencies.sha3]
version = "0.10"

[dependencies.signature]
version = "1.5"

[dependencies.aes]
version = "0.8"

[dependencies.cbc]
git = "https://github.com/RustCrypto/block-modes"
features = ["block-padding", "alloc"]

[features]
default = []
serde = ['serde_crate', 'serde_bytes']

[dev-dependencies]
