[package]
name = "sym-crypto"
version = "0.1.1-alpha.1"
authors = ["Puppet Black <blockpuppetblack0@gmail.com>"]
description = "Symbol Bockchain crypto crate."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/BlockPuppets/symbol-crypto-core"
keywords = ["symbol", "nem", "cryptography", "curve25519"]
categories = ["cryptography"]
exclude = [".gitignore"]
edition = "2018"

[lib]
name = "sym_crypto"
crate-type = ["lib"]

[dependencies.core-crypto]
version = "0.1.1-alpha.1"
path = "../core"

[dependencies.serde_crate]
package = "serde"
version = "1.0"
optional = true

[dependencies.serde_bytes]
version = "0.11"
optional = true

[dependencies.rand]
version = "0.7"
default-features = false

[dependencies.aes-gcm]
version = "0.8.0"

[dependencies.hkdf]
version = "0.10.0"

[dependencies.sha2]
version = "0.9"

[dependencies.anyhow]
version = "1.0"

[features]
default = []
serde = ['serde_crate', 'serde_bytes']

[dev-dependencies]
